--- a/src/Component/Styles.css
+++ b/src/Component/Styles.css
@@ -66,7 +66,7 @@ button:hover {
 }
 
 .msg {
-  padding: 10px 20px;
+  padding: 10px;
 }
 
 .msg.success {
@@ -114,7 +114,7 @@ th {
 
 .submit-form-card {
   max-width: 750px;
-  width: 100%;
+/*  width: 100%;*/
 }
 
 .ticket_details {
